--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "dc-cli-vuepress",
-  "title": "dc-cli-vuepress",
-  "version": "1.0.0",
-  "description": "dc-cli-vuepress",
-  "author": "Jiuto",
+  "name": "dc-doc",
+  "title": "dc-doc",
+  "version": "2.0.0",
+  "description": "dc组织生态文档",
+  "author": "Jiuto,dxj",
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs"
   },
   "license": "MIT",
   "devDependencies": {
