feat:修改发布规则

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Jiuto,dxj",
   "scripts": {
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "build": "vuepress build docs",
+    "deploy":"sh deploy.sh"
   },
   "license": "MIT",
   "devDependencies": {
